Complete lighting stage L1 temporal frame contracts